# NeoSnakeGame

./: CMakeLists.txt  README.md  main.cpp
include/game/: AppleObject.hpp  SnakeBodyObject.hpp  SnakeObject.hpp  TileMap.hpp  TileObject.hpp
include/math/: Vector2.hpp
include/object/: GameObject.hpp  IComponent.hpp  IObject.hpp  ObjectManager.hpp  Transform.hpp
include/renderer/: render.hpp  renderBuffer.hpp
include/system/: Application.hpp  InputSystem.hpp  LockQueue.h  timer.hpp
src/game/: SnakeBodyObject.cpp  SnakeObject.cpp  TileMap.cpp  TileObject.cpp
src/object/: GameObject.cpp  ObjectManager.cpp  Transform.cpp
src/renderer/: render.cpp  renderBuffer.cpp
src/system/: Application.cpp  InputSystem.cpp  timer.cpp
